feat: add docker_image and docker_tag to cluster api
